<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#555555"
    android:baselineAligned ="false"
    android:layout_marginBottom="280dip"
    android:layout_marginLeft="775dip"
    android:layout_marginRight="455dip"
    android:layout_marginTop="400dip"
    android:orientation="horizontal" xmlns:tools="http://schemas.android.com/tools">
    <SurfaceView   
        android:id="@+id/surfaceView"  
        android:layout_width="1dip"  
        android:layout_height="1dip"  
        />  
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="3dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="5"
            android:background="@drawable/white_bg"
            android:orientation="horizontal"
            android:layout_marginTop="10dip"
            tools:ignore="NestedWeights" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dip"
                android:orientation="vertical" >
				<LinearLayout 
				    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="5"
                    android:background="@drawable/top_bg"
                    android:padding="5dip"
				    >
				    <com.example.uitl.RoundAngleImageView
                    android:id="@+id/top"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"/>
				</LinearLayout>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="#111111"
                     />
            </LinearLayout>

            <TextView
                android:id="@+id/introductioncontent"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#111111"
                android:textSize="16sp"
                android:layout_margin="9dip"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="@drawable/white_bg"
            android:gravity="center_vertical"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="15dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#111111"
                android:layout_marginLeft="30dip"
                android:textSize="16sp"
                android:layout_marginRight="10dip"
                android:text="@string/agentid" />

            <TextView
                android:id="@+id/agent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#111111"
                android:textSize="16sp"
                android:layout_marginRight="50dip"
                />

            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="25dip"
                    android:layout_height="25dip"
                    android:background="@drawable/star_no"
                    android:contentDescription="@null"/>
                <ImageView 
                    android:id="@+id/star2"
                    android:layout_width="25dip"
                    android:layout_height="25dip"
                    android:background="@drawable/star_no"
                    android:contentDescription="@null"
                    />
                <ImageView 
                    android:id="@+id/star3"
                    android:layout_width="25dip"
                    android:layout_height="25dip"
                    android:background="@drawable/star_no"
                    android:contentDescription="@null"
                    />
                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="25dip"
                    android:layout_height="25dip"
                    android:background="@drawable/star_no"
                    android:contentDescription="@null"
                    />
                <ImageView 
                    android:id="@+id/star5"
                    android:layout_width="25dip"
                    android:layout_height="25dip"
                    android:background="@drawable/star_no"
                    android:contentDescription="@null"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dip"
        android:layout_marginTop="16dip"
        android:background="@drawable/ash"
        android:layout_marginLeft="10dip"
        android:layout_weight="1"
        android:layout_marginRight="10dip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/could_you_please_evaluate_my_service"
            android:textColor="#111111"
            android:textSize="22sp"
            tools:ignore="NestedWeights" />

		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="0dip"
		    android:layout_weight="1"
		    android:gravity="bottom|center_horizontal"
		    tools:ignore="UselessLeaf" >

		</RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_marginTop="30dip"
            tools:ignore="DisableBaselineAlignment" >

            <LinearLayout
                android:id="@+id/very_satisfied_with"
                android:clickable="true"
                android:onClick="click"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="8dip"
                android:layout_marginBottom="8dip"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#588F26">    

                <ImageView
                    android:layout_width="45dip"
                    android:layout_height="45dip"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dip"
                    android:contentDescription="@null"
                    android:background="@drawable/smiling_face" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/very_satisfied_with"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
			</LinearLayout>
            <LinearLayout 
                android:id="@+id/satisfied_with_the"
                android:clickable="true"
                android:onClick="click"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="8dip"
                android:layout_marginBottom="8dip"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#A9CF55">    

                <ImageView
                    android:layout_width="45dip"
                    android:layout_height="45dip"
                    android:textSize="18sp"
                    android:contentDescription="@null"
                    android:layout_marginBottom="5dip"
                    android:background="@drawable/smile" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/satisfied_with_the"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
			</LinearLayout>
            <LinearLayout 
                android:id="@+id/general"
                android:clickable="true"
                android:onClick="click"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="8dip"
                android:layout_marginBottom="8dip"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#F2D03A">    

                <ImageView
                    android:layout_width="45dip"
                    android:layout_height="45dip"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dip"
                    android:contentDescription="@null"
                    android:background="@drawable/general" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/general"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
			</LinearLayout>
            <LinearLayout 
                android:id="@+id/not_satisfied_with"
                android:clickable="true"
                android:onClick="click"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:layout_marginBottom="8dip"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#F1836A">    

                <ImageView
                    android:layout_width="45dip"
                    android:layout_height="45dip"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dip"
                    android:background="@drawable/not_happy" 
                    android:contentDescription="@null"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_satisfied_with"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
			</LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!-- 显示预览图形 -->  
</LinearLayout>